Minor changes to documentation theme style

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,3 +1,15 @@
 table.longtable {
     margin-bottom: 30px;
 }
+
+dl.function > dt,
+dl.data > dt,
+dl.exception > dt,
+dl.class > dt,
+dl.attribute > dt,
+dl.method > dt,
+dl.classmethod > dt,
+dl.staticmethod > dt {
+    background-color: gainsboro;
+    padding: 1px 5px
+}
